--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Real Estate Manager</string>
+
+    <string name="list_tab">List</string>
+    <string name="map_tab">Map</string>
 </resources>
