--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,8 @@
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="an_error_append">An error append</string>
+    <string name="error_creating_folder">An error append when creating folder</string>
+    <string name="error_saving_file">Error when saving file</string>
+    <string name="error_opening_camera">Error when opening camera</string>
+    <string name="capture">Capture</string>
 </resources>
