Add image picker

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="error_saving_file">Error when saving file</string>
     <string name="error_opening_camera">Error when opening camera</string>
     <string name="capture">Capture</string>
+    <string name="gallery">Gallery</string>
 </resources>
