Add check button to save image + debug preview when resume

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="error_opening_camera">Error when opening camera</string>
     <string name="capture">Capture</string>
     <string name="gallery">Gallery</string>
+    <string name="check">Check</string>
 </resources>
