--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,10 @@
     <string name="error_creating_folder">An error append when creating folder</string>
     <string name="error_saving_file">Error when saving file</string>
     <string name="error_opening_camera">Error when opening camera</string>
-    <string name="capture">Capture</string>
+    <string name="capture">Capture photo</string>
     <string name="gallery">Gallery</string>
     <string name="check">Check</string>
+    <string name="photo">Photo</string>
+    <string name="video">Video</string>
+    <string name="record">Record</string>
 </resources>
