--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,5 @@
     <string name="photo">Photo</string>
     <string name="video">Video</string>
     <string name="record">Record</string>
+    <string name="capture_picture">Capture picture</string>
 </resources>
