--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="video">Video</string>
     <string name="record">Record</string>
     <string name="capture_picture">Capture picture</string>
+    <string name="add_description">Add description</string>
 </resources>
