--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,5 @@
     <string name="record">Record</string>
     <string name="capture_picture">Capture picture</string>
     <string name="add_description">Add description</string>
+    <string name="remove_media">Remove media</string>
 </resources>
