--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,11 @@
     <string name="notification_title">Uploads done!</string>
     <string name="all_properties_has_been_uploaded">All properties has been uploaded!</string>
     <string name="select_sold_date">Select sold date</string>
+    <string name="poi_school">School</string>
+    <string name="poi_grocery">Grocery</string>
+    <string name="poi_park">Park</string>
+    <string name="poi_public_transport">Public transport</string>
+    <string name="poi_swimming_pool">Swimming pool</string>
+    <string name="poi_fitness_club">Fitness club</string>
+    <string name="poi_parking">Parking</string>
 </resources>
