--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,4 +82,5 @@
     <string name="settings">Settings</string>
     <string name="currency">Currency</string>
     <string name="unit">Unit</string>
+    <string name="sold">SOLD!</string>
 </resources>
