--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,4 +83,6 @@
     <string name="currency">Currency</string>
     <string name="unit">Unit</string>
     <string name="sold">SOLD!</string>
+    <string name="open_date_picker">Open date picker</string>
+    <string name="clear_date_picker">Clear date picker</string>
 </resources>
