do some refactoring on userData classes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,13 @@
     <string name="property_type">Property type</string>
     <string name="price">Price</string>
     <string name="dollar_symbol">$</string>
+    <string name="dollar">Dollar</string>
+    <string name="euro_symbol">€</string>
+    <string name="euro">Euro</string>
+    <string name="imperial">Imperial</string>
+    <string name="metric">Metric</string>
+    <string name="sq_ft">sq ft</string>
+    <string name="m2">m²</string>
     <string name="add_media">Add media</string>
     <string name="edit">Edit</string>
     <string name="address_line_1">Address line 1</string>
@@ -56,7 +63,6 @@
     <string name="city">City</string>
     <string name="postal_code">Postal code</string>
     <string name="country">Country</string>
-    <string name="sq_ft">sq ft</string>
     <string name="add">Add</string>
     <string name="save">Save</string>
     <string name="address_line_2_optional">Address line 2 (Optional)</string>
