Change edit text for radio buttons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -135,5 +135,6 @@
     <string name="remove_filters">Remove filters</string>
     <string name="from">From</string>
     <string name="to">To</string>
+    <string name="apply_settings">Apply settings</string>
 
 </resources>
