Adjust dimens for hdpi and mdpi screens

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,15 +36,15 @@
     <string name="property_picture">Property picture</string>
     <string name="media">Media</string>
     <string name="property_location">Property location</string>
-    <string name="number_of_bedrooms">Number of bedrooms</string>
-    <string name="number_of_bathrooms">Number of bathrooms</string>
-    <string name="number_of_rooms">Number of rooms</string>
+    <string name="bedrooms_amount">Bedrooms</string>
+    <string name="bathrooms_amount">Bathrooms</string>
+    <string name="rooms_amount">Rooms</string>
     <string name="surface">Surface</string>
     <string name="description">Description</string>
     <string name="location">Location</string>
     <string name="post_date">Post date</string>
     <string name="sold_date">Sold date</string>
-    <string name="real_estate_agent">Real estate agent</string>
+    <string name="real_estate_agent">Agent</string>
     <string name="point_of_interest">Points of interest</string>
     <string name="property_type">Property type</string>
     <string name="price">Price</string>
@@ -117,15 +117,15 @@
     <string name="types_title">Types :</string>
     <string name="price_range_title">Price range :</string>
     <string name="surface_range_title">Surface range :</string>
-    <string name="rooms_title">Minimum rooms :</string>
-    <string name="bathrooms_title">Minimum bathrooms :</string>
-    <string name="bedrooms_title">Minimum bedrooms :</string>
+    <string name="rooms_title">Rooms :</string>
+    <string name="bathrooms_title">Bathrooms :</string>
+    <string name="bedrooms_title">Bedrooms :</string>
     <string name="_0">0</string>
     <string name="point_of_interest_title">Points of interest :</string>
     <string name="post_date_title">Post date :</string>
     <string name="available_since">Available since</string>
     <string name="sold_since">Sold since</string>
-    <string name="medias_title">Minimum medias amount :</string>
+    <string name="medias_title">Medias :</string>
     <string name="_1">1</string>
     <string name="apply_filters">Apply filters</string>
     <string name="reset_filters">Reset filters</string>
